--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "framer-motion": "^12.26.1",
+    "lucide-react": "^0.562.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1"
